--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <style>
         body {
             margin: 0;
-            overflow-x: hidden;
+            overflow: hidden;
             background: linear-gradient(to bottom, #0a0a0a, #1a1a2e);
-            background-attachment: fixed;
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
