--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <style>
         body {
             margin: 0;
-            overflow: hidden;
+            overflow-x: hidden;
             background: linear-gradient(to bottom, #0a0a0a, #1a1a2e);
+            background-attachment: fixed;
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
@@ -25,6 +26,15 @@
             position: relative;
             z-index: 2;
             padding: 50px;
+            opacity: 0;
+            animation: fadeIn 2s ease-in-out forwards;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        h1, p, .game-list a {
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
         }
         h1 {
             font-size: 3rem;
@@ -41,12 +51,12 @@
 <body>
     <canvas id="galaxy"></canvas>
     <div class="container">
-        <h1>Project Warrant - PV</h1>
-        <p>score a 3 with a toddler's head</p>
+        <h1>Project Warrant PV</h1>
+        <p>Explore endless space and play your favorite games!</p>
         <div class="game-list">
-            <a href="assignments.html">Games</a>
-            <a href="grades.html">Proxies</a>
-            <a href="contact.html">Support</a>
+            <a href="game1.html">Game 1</a>
+            <a href="game2.html">Game 2</a>
+            <a href="game3.html">Game 3</a>
         </div>
     </div>
 
