--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 <body>
     <canvas id="galaxy"></canvas>
     <div class="container">
-        <h1>Project Warrant PV</h1>
+        <h1>Project Warrant</h1>
         <p>Explore endless space and play your favorite games!</p>
         <div class="game-list">
-            <a href="game1.html">Game 1</a>
-            <a href="game2.html">Game 2</a>
-            <a href="game3.html">Game 3</a>
+            <a href="assignments.html">Games</a>
+            <a href="grades.html">Proxies</a>
+            <a href="support.html">Support</a>
         </div>
     </div>
 
