--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Warrant PV</title>
+    <title>W-PV-26</title>
     <style>
         body {
             margin: 0;
@@ -52,7 +52,7 @@
     <canvas id="galaxy"></canvas>
     <div class="container">
         <h1>Project Warrant</h1>
-        <p>Explore endless space and play your favorite games!</p>
+        <p>Ran by Delta and BDR</p>
         <div class="game-list">
             <a href="assignments.html">Games</a>
             <a href="grades.html">Proxies</a>
