--- a/support.html
+++ b/support.html
@@ -65,7 +65,7 @@
             <h2>Get in Touch</h2>
             <p>Email: <a href="mailto:projectwarrant@outlook.com">projectwarrant@outlook.com</a></p>
             <p>Phone: +1 (205) 363-whatever my last 4 digits are i forgot</p>
-            <p>Telegram: <a href="https://t.me/ProjectWarrantPV" target="_blank">@ProjectWarrantPV</a></p>
+            <p>Chat: <a href="https://placeholder.com" target="_blank">Project Warrant Chat</a></p>
         </div>
     </div>
 
