--- a/grades.html
+++ b/grades.html
@@ -55,17 +55,23 @@
             text-decoration: underline;
         }
     </style>
+    <script>
+        function openInBlank(url) {
+            const newTab = window.open("about:blank", "_blank");
+            newTab.document.write(`<iframe src="${url}" style="width:100vw; height:100vh; border:none;"></iframe>`);
+        }
+    </script>
 </head>
 <body>
     <div class="container">
         <h1>Proxies</h1>
         <div class="proxy-grid">
-            <div class='proxy-card'><a href='https://dogeproxy-three.vercel.app/' target='_blank'>Placeholder Site 1</a></div>
-            <div class='proxy-card'><a href='https://dogeproxy-three.vercel.app/' target='_blank'>Placeholder Site 2</a></div>
-            <div class='proxy-card'><a href='https://dogeproxy-three.vercel.app/' target='_blank'>Placeholder Site 3</a></div>
-            <div class='proxy-card'><a href='https://dogeproxy-three.vercel.app/' target='_blank'>Placeholder Site 4</a></div>
-            <div class='proxy-card'><a href='https://dogeproxy-three.vercel.app/' target='_blank'>Placeholder Site 5</a></div>
-            <div class='proxy-card'><a href='https://dogeproxy-three.vercel.app/' target='_blank'>Placeholder Site 6</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Doge Proxy</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 2</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 3</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 4</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 5</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 6</a></div>
         </div>
     </div>
 </body>
