--- a/grades.html
+++ b/grades.html
@@ -58,7 +58,33 @@
     <script>
         function openInBlank(url) {
             const newTab = window.open("about:blank", "_blank");
-            newTab.document.write(`<iframe src="${url}" style="width:100vw; height:100vh; border:none;"></iframe>`);
+            newTab.document.write(`
+                <html>
+                <head>
+                    <title>Proxy</title>
+                    <style>
+                        html, body {
+                            margin: 0;
+                            padding: 0;
+                            width: 100%;
+                            height: 100%;
+                            overflow: hidden;
+                        }
+                        iframe {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            border: none;
+                        }
+                    </style>
+                </head>
+                <body>
+                    <iframe src="${url}"></iframe>
+                </body>
+                </html>
+            `);
         }
     </script>
 </head>
@@ -66,7 +92,7 @@
     <div class="container">
         <h1>Proxies</h1>
         <div class="proxy-grid">
-            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Doge Proxy</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 1</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 2</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 3</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 4</a></div>
