--- a/index.html
+++ b/index.html
@@ -160,6 +160,18 @@
 
 		createParticles();
 		animate();
+
+		window.addEventListener('mousemove', (e) => {
+			particles.forEach(particle => {
+				let dx = e.x - particle.x;
+				let dy = e.y - particle.y;
+				let distance = Math.sqrt(dx * dx + dy * dy);
+				if (distance < 100) {
+					particle.x += dx * 0.02;
+					particle.y += dy * 0.02;
+				}
+			});
+		});
 	</script>
 </body>
 
