--- a/grades.html
+++ b/grades.html
@@ -14,17 +14,66 @@
             font-family: Arial, sans-serif;
             text-align: center;
         }
+
+        canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
+        .nav-bar {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            padding: 15px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .nav-bar a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.2rem;
+            padding: 10px 15px;
+            transition: 0.3s;
+            text-align: center;
+            flex-grow: 1;
+        }
+
+        .nav-bar a:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+        }
+
+        .nav-bar a:first-child {
+            font-size: 2rem;
+            font-weight: bold;
+            text-align: left;
+            flex-grow: 2;
+        }
+
         .container {
             position: relative;
             z-index: 2;
-            padding: 50px;
+            padding: 100px 50px 50px;
             opacity: 0;
             animation: fadeIn 2s ease-in-out forwards;
         }
+
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
         }
+
         .proxy-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -33,6 +82,7 @@
             max-width: 800px;
             margin: auto;
         }
+
         .proxy-card {
             background: rgba(255, 255, 255, 0.1);
             border-radius: 10px;
@@ -41,9 +91,11 @@
             box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
             transition: transform 0.3s ease-in-out;
         }
+
         .proxy-card:hover {
             transform: scale(1.05);
         }
+
         .proxy-card a {
             color: cyan;
             text-decoration: none;
@@ -51,6 +103,7 @@
             font-weight: bold;
             display: block;
         }
+
         .proxy-card a:hover {
             text-decoration: underline;
         }
@@ -58,41 +111,22 @@
     <script>
         function openInBlank(url) {
             const newTab = window.open("about:blank", "_blank");
-            newTab.document.write(`
-                <html>
-                <head>
-                    <title>Proxy</title>
-                    <style>
-                        html, body {
-                            margin: 0;
-                            padding: 0;
-                            width: 100%;
-                            height: 100%;
-                            overflow: hidden;
-                        }
-                        iframe {
-                            position: absolute;
-                            top: 0;
-                            left: 0;
-                            width: 100%;
-                            height: 100%;
-                            border: none;
-                        }
-                    </style>
-                </head>
-                <body>
-                    <iframe src="${url}"></iframe>
-                </body>
-                </html>
-            `);
+            newTab.document.write(`<iframe src="${url}" style="position:fixed;top:0;left:0;width:100vw;height:100vh;border:none;"></iframe>`);
         }
     </script>
 </head>
 <body>
+    <canvas id="galaxy"></canvas>
+    <div class="nav-bar">
+        <a href="index.html">Project Warrant</a>
+        <a href="assignments.html">Games</a>
+        <a href="grades.html">Proxies</a>
+        <a href="support.html">Support</a>
+    </div>
     <div class="container">
         <h1>Proxies</h1>
         <div class="proxy-grid">
-            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Doge Proxy 1</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 1</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 2</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 3</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 4</a></div>
@@ -100,5 +134,74 @@
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Placeholder Site 6</a></div>
         </div>
     </div>
+
+    <script>
+		const canvas = document.getElementById('galaxy');
+		const ctx = canvas.getContext('2d');
+		canvas.width = window.innerWidth;
+		canvas.height = window.innerHeight;
+
+		let particles = [];
+
+		class Particle {
+			constructor(x, y, size, speedX, speedY) {
+				this.x = x;
+				this.y = y;
+				this.size = size;
+				this.speedX = speedX;
+				this.speedY = speedY;
+			}
+
+			draw() {
+				ctx.fillStyle = 'white';
+				ctx.beginPath();
+				ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+				ctx.fill();
+			}
+
+			update() {
+				this.x += this.speedX;
+				this.y += this.speedY;
+				if (this.x > canvas.width || this.x < 0) this.speedX *= -1;
+				if (this.y > canvas.height || this.y < 0) this.speedY *= -1;
+			}
+		}
+
+		function createParticles() {
+			particles = [];
+			for (let i = 0; i < 100; i++) {
+				let size = Math.random() * 3;
+				let x = Math.random() * canvas.width;
+				let y = Math.random() * canvas.height;
+				let speedX = (Math.random() - 0.5) * 2;
+				let speedY = (Math.random() - 0.5) * 2;
+				particles.push(new Particle(x, y, size, speedX, speedY));
+			}
+		}
+
+		function animate() {
+			ctx.clearRect(0, 0, canvas.width, canvas.height);
+			particles.forEach(particle => {
+				particle.update();
+				particle.draw();
+			});
+			requestAnimationFrame(animate);
+		}
+
+		createParticles();
+		animate();
+
+		window.addEventListener('mousemove', (e) => {
+			particles.forEach(particle => {
+				let dx = e.x - particle.x;
+				let dy = e.y - particle.y;
+				let distance = Math.sqrt(dx * dx + dy * dy);
+				if (distance < 100) {
+					particle.x += dx * 0.02;
+					particle.y += dy * 0.02;
+				}
+			});
+		});
+	</script>
 </body>
 </html>
