--- a/Main/support.html
+++ b/Main/support.html
@@ -64,7 +64,7 @@
         <div class="contact-info">
             <h2>Get in Touch</h2>
             <p>Email: <a href="mailto:projectwarrant@outlook.com">projectwarrant@outlook.com</a></p>
-            <p>Phone: +1 (205) 363-whatever my last 4 digits are i forgot</p>
+            <p>Phone: +1 (205) 312-9364</p>
             <p>Chat: <a href="https://placeholder.com" target="_blank">Project Warrant Chat</a></p>
         </div>
     </div>
