--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
 	<div class="nav-bar">
 		<a href="index.html">Project Warrant</a>
-		<a href="assignments.html">Games</a>
-		<a href="grades.html">Proxies</a>
-		<a href="support.html">Support</a>
+		<a href="/Main/assignments.html">Games</a>
+		<a href="/Main/grades.html">Proxies</a>
+		<a href="/Main/support.html">Support</a>
 	</div>
 
 	<div class="search-container">
