--- a/Main/assignments.html
+++ b/Main/assignments.html
@@ -100,10 +100,10 @@
 <body>
     <canvas id="galaxy"></canvas>
     <div class="nav-bar">
-        <a href="index.html">Project Warrant</a>
-        <a href="assignments.html">Games</a>
-        <a href="grades.html">Proxies</a>
-        <a href="support.html">Support</a>
+		<a href="index.html">Project Warrant</a>
+		<a href="/Main/assignments.html">Games</a>
+		<a href="/Main/grades.html">Proxies</a>
+		<a href="/Main/support.html">Support</a>
     </div>
     <div class="container">
         <h1>Choose Your Game</h1>
