--- a/index.html
+++ b/index.html
@@ -92,49 +92,36 @@
 
 	<div class="nav-bar">
 		<a href="index.html">Project Warrant</a>
-		<a href="/Main/assignments.html">Games</a>
-		<a href="/Main/grades.html">Proxies</a>
-		<a href="/Main/support.html">Support</a>
+		<a href="assignments.html">Games</a>
+		<a href="grades.html">Proxies</a>
+		<a href="support.html">Support</a>
 	</div>
 
 	<div class="search-container">
 		<input type="text" placeholder="Search or enter URL..." id="search-bar">
 	</div>
 
-	<script>
-		(async () => {
-			const UV_BASE = "https://proxy-please-work.vercel.app/"; // Replace with your actual UV deployment URL
+		<script>
+			// Vercel Proxy URL
+		const PROXY_URL = "https://proxy-please-work.vercel.app/proxy"; // Your actual Vercel URL
 
-			const script = document.createElement("script");
-			script.src = `${UV_BASE}/uv/uv.bundle.js`;
-			document.head.appendChild(script);
-			await new Promise(resolve => script.onload = resolve);
+		document.getElementById("search-bar").addEventListener("keypress", function(event) {
+			if (event.key === "Enter") {
+				event.preventDefault();
+				const query = this.value.trim();
+				if (query) {
+					const isURL = query.includes(".") || query.startsWith("http");
+					const targetURL = isURL ? query : `https://www.google.com/search?q=${encodeURIComponent(query)}`;
 
-			const uvConfigScript = document.createElement("script");
-			uvConfigScript.src = `${UV_BASE}/uv/uv.config.js`;
-			document.head.appendChild(uvConfigScript);
-			await new Promise(resolve => uvConfigScript.onload = resolve);
+					// XOR encode the URL like UV does (here we use Base64 encoding for simplicity)
+					const encodedUrl = btoa(targetURL); // Base64 encoding as a placeholder
 
-			if (typeof Ultraviolet === "undefined") return;
-			const uv = new Ultraviolet();
-
-			function encodeURL(url) {
-				return `${UV_BASE}/uv/service/${uv.codec.xor.encode(url)}`;
-			}
-
-			document.getElementById("search-bar").addEventListener("keypress", function(event) {
-				if (event.key === "Enter") {
-					event.preventDefault();
-					const query = this.value.trim();
-					if (query) {
-						const isURL = query.includes(".") || query.startsWith("http");
-						const targetURL = isURL ? query : `https://www.google.com/search?q=${encodeURIComponent(query)}`;
-						window.location.href = encodeURL(targetURL);
-					}
+					// Redirect to the proxy with the encoded URL
+					window.location.href = `${PROXY_URL}?url=${encodeURIComponent(encodedUrl)}`;
 				}
-			});
-		})();
-	</script>
+			}
+		});
+		</script>
 </body>
 
 </html>
