--- a/index.html
+++ b/index.html
@@ -89,14 +89,16 @@
 			width: 90%;
 			height: 80vh;
 			overflow: auto;
-			margin-top: 100px; /* Adjust to avoid navbar overlap */
+			margin-top: 100px;
 			margin-left: auto;
 			margin-right: auto;
 			border: 2px solid rgba(255, 255, 255, 0.2);
 			border-radius: 10px;
+			padding: 15px;
+			background-color: #1a1a2e;
 		}
 
-		iframe {
+		#proxy-content iframe {
 			width: 100%;
 			height: 100%;
 			border: none;
@@ -119,33 +121,37 @@
 	</div>
 
 	<div id="proxy-content">
-		<!-- The proxied content will be loaded here inside an iframe -->
+		<!-- Proxied content will appear here directly -->
 	</div>
 
 	<script>
 		// Vercel Proxy URL
-		const PROXY_URL = "https://proxy-please-work.vercel.app/proxy"; // Your actual Vercel URL
+		const PROXY_URL = "https://proxy-please-work.vercel.app/proxy"; // Your Vercel proxy URL
 
 		document.getElementById("search-bar").addEventListener("keypress", function(event) {
-	if (event.key === "Enter") {
-		event.preventDefault();
-		const query = this.value.trim();
-		if (query) {
-			// Ensure the query is a URL or transform it into a Google search
-			const isURL = query.includes(".") || query.startsWith("http");
-			const targetURL = isURL ? query : `https://www.google.com/search?q=${encodeURIComponent(query)}`;
+			if (event.key === "Enter") {
+				event.preventDefault();
+				const query = this.value.trim();
+				if (query) {
+					// Ensure the query is a URL or transform it into a Google search
+					const isURL = query.includes(".") || query.startsWith("http");
+					const targetURL = isURL ? query : `https://www.google.com/search?q=${encodeURIComponent(query)}`;
 
-			// URL encode the target URL before passing it to the proxy
-			const encodedUrl = encodeURIComponent(targetURL);
+					// URL encode the target URL before passing it to the proxy
+					const encodedUrl = encodeURIComponent(targetURL);
 
-			// Dynamically load the proxied content inside the #proxy-content div
-			const iframe = document.createElement("iframe");
-			iframe.src = `${PROXY_URL}?url=${encodedUrl}`;
-			document.getElementById("proxy-content").innerHTML = ''; // Clear previous content
-			document.getElementById("proxy-content").appendChild(iframe);
-		}
-	}
-});
+					// Fetch and render content directly within the #proxy-content div
+					fetch(`${PROXY_URL}?url=${encodedUrl}`)
+						.then(response => response.text())
+						.then(content => {
+							document.getElementById("proxy-content").innerHTML = content;
+						})
+						.catch(error => {
+							console.error("Error loading proxied content:", error);
+						});
+				}
+			}
+		});
 	</script>
 </body>
 
