--- a/index.html
+++ b/index.html
@@ -97,12 +97,6 @@
 			padding: 15px;
 			background-color: #1a1a2e;
 		}
-
-		#proxy-content iframe {
-			width: 100%;
-			height: 100%;
-			border: none;
-		}
 	</style>
 </head>
 
@@ -140,14 +134,24 @@
 					// URL encode the target URL before passing it to the proxy
 					const encodedUrl = encodeURIComponent(targetURL);
 
+					// Clear the previous content
+					document.getElementById("proxy-content").innerHTML = "Loading...";
+
 					// Fetch and render content directly within the #proxy-content div
 					fetch(`${PROXY_URL}?url=${encodedUrl}`)
-						.then(response => response.text())
+						.then(response => {
+							if (!response.ok) {
+								throw new Error("Failed to load proxied content");
+							}
+							return response.text();
+						})
 						.then(content => {
+							// Clear any existing content and inject the fetched proxied content
 							document.getElementById("proxy-content").innerHTML = content;
 						})
 						.catch(error => {
 							console.error("Error loading proxied content:", error);
+							document.getElementById("proxy-content").innerHTML = "Error loading content. Please try again.";
 						});
 				}
 			}
