--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			background: rgba(255, 255, 255, 0.2);
 		}
 
-		#proxy-content {
+		#proxy-container {
 			width: 90%;
 			height: 80vh;
 			overflow: auto;
@@ -96,6 +96,29 @@
 			border-radius: 10px;
 			padding: 15px;
 			background-color: #1a1a2e;
+			display: none; /* Initially hide the proxied content container */
+		}
+
+		#proxy-container iframe {
+			width: 100%;
+			height: 100%;
+			border: none;
+			border-radius: 8px;
+		}
+
+		#fullscreen-btn {
+			background-color: #333;
+			color: white;
+			padding: 10px 15px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			margin-top: 10px;
+			display: none; /* Hide fullscreen button initially */
+		}
+
+		#fullscreen-btn:hover {
+			background-color: #444;
 		}
 	</style>
 </head>
@@ -114,13 +137,31 @@
 		<input type="text" placeholder="Search or enter URL..." id="search-bar">
 	</div>
 
-	<div id="proxy-content">
-		<!-- Proxied content will appear here directly -->
+	<div id="proxy-container">
+		<iframe id="proxy-iframe" src="" frameborder="0"></iframe>
 	</div>
+
+	<button id="fullscreen-btn">Go Fullscreen</button>
 
 	<script>
 		// Vercel Proxy URL
 		const PROXY_URL = "https://proxy-please-work.vercel.app/proxy"; // Your Vercel proxy URL
+		let iframe = document.getElementById("proxy-iframe");
+		let proxyContainer = document.getElementById("proxy-container");
+		let fullscreenBtn = document.getElementById("fullscreen-btn");
+
+		// Function to toggle fullscreen mode
+		fullscreenBtn.addEventListener("click", function() {
+			if (proxyContainer.requestFullscreen) {
+				proxyContainer.requestFullscreen();
+			} else if (proxyContainer.mozRequestFullScreen) { // Firefox
+				proxyContainer.mozRequestFullScreen();
+			} else if (proxyContainer.webkitRequestFullscreen) { // Chrome, Safari
+				proxyContainer.webkitRequestFullscreen();
+			} else if (proxyContainer.msRequestFullscreen) { // IE/Edge
+				proxyContainer.msRequestFullscreen();
+			}
+		});
 
 		document.getElementById("search-bar").addEventListener("keypress", function(event) {
 			if (event.key === "Enter") {
@@ -134,10 +175,14 @@
 					// URL encode the target URL before passing it to the proxy
 					const encodedUrl = encodeURIComponent(targetURL);
 
-					// Clear the previous content
-					document.getElementById("proxy-content").innerHTML = "Loading...";
+					// Show the proxy container and hide the search bar
+					proxyContainer.style.display = "block";
+					fullscreenBtn.style.display = "inline-block";  // Show fullscreen button
 
-					// Fetch and render content directly within the #proxy-content div
+					// Clear the previous content
+					iframe.src = "";
+
+					// Fetch and load content directly into the iframe
 					fetch(`${PROXY_URL}?url=${encodedUrl}`)
 						.then(response => {
 							if (!response.ok) {
@@ -146,12 +191,12 @@
 							return response.text();
 						})
 						.then(content => {
-							// Clear any existing content and inject the fetched proxied content
-							document.getElementById("proxy-content").innerHTML = content;
+							// Inject the proxied content into the iframe
+							iframe.srcdoc = content;
 						})
 						.catch(error => {
 							console.error("Error loading proxied content:", error);
-							document.getElementById("proxy-content").innerHTML = "Error loading content. Please try again.";
+							proxyContainer.innerHTML = "Error loading content. Please try again.";
 						});
 				}
 			}
