--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 	<script>
 		// Backend Proxy URL (replace with your actual server URL)
-		const PROXY_URL = "https://proxy-please-work.vercel.app/"; // Replace this URL with your actual server URL
+		const PROXY_URL = "https://ultraviolet-five-puce.vercel.app/"; // Replace this URL with your actual server URL
 		let iframe = document.getElementById("proxy-iframe");
 		let proxyContainer = document.getElementById("proxy-container");
 		let fullscreenBtn = document.getElementById("fullscreen-btn");
