--- a/static/assignments.html
+++ b/static/assignments.html
@@ -100,10 +100,9 @@
 <body>
     <canvas id="galaxy"></canvas>
     <div class="nav-bar">
-		<a href="index.html">Project Warrant</a>
-		<a href="/Main/assignments.html">Games</a>
-		<a href="/Main/grades.html">Proxies</a>
-		<a href="/Main/support.html">Support</a>
+		<a href="./static/index.html">Project Warrant</a>
+		<a href="./static/grades.html">Proxies</a>
+		<a href="./static/support.html">Support</a>
     </div>
     <div class="container">
         <h1>Choose Your Game</h1>
