--- a/static/support.html
+++ b/static/support.html
@@ -68,7 +68,11 @@
             <p>Chat: <a href="https://placeholder.com" target="_blank">Project Warrant Chat</a></p>
         </div>
     </div>
-
+    <div class="nav-bar">
+        <a href="./static/index.html">Project Warrant</a>
+        <a href="./static/assignments.html">Games</a>
+        <a href="./static/grades.html">Proxies</a>
+    </div>
     <script>
 		const canvas = document.getElementById('galaxy');
 		const ctx = canvas.getContext('2d');
