--- a/static/grades.html
+++ b/static/grades.html
@@ -118,9 +118,9 @@
 <body>
     <canvas id="galaxy"></canvas>
     <div class="nav-bar">
-		<a href="./static/index.html">Project Warrant</a>
-		<a href="./static/assignments.html">Games</a>
-		<a href="./static/support.html">Support</a>
+		<a href="index.html">Project Warrant</a>
+		<a href="/static/assignments.html">Games</a>
+		<a href="/static/support.html">Support</a>
     </div>
     <div class="container">
         <h1>Proxies</h1>
