--- a/static/support.html
+++ b/static/support.html
@@ -69,9 +69,9 @@
         </div>
     </div>
     <div class="nav-bar">
-        <a href="./static/index.html">Project Warrant</a>
-        <a href="./static/assignments.html">Games</a>
-        <a href="./static/grades.html">Proxies</a>
+        <a href="index.html">Project Warrant</a>
+        <a href="/static/assignments.html">Games</a>
+        <a href="/static/grades.html">Proxies</a>
     </div>
     <script>
 		const canvas = document.getElementById('galaxy');
