--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <canvas id="galaxy"></canvas>
 
     <div class="nav-bar">
-        <a href="./static/index.html">Project Warrant</a>
-        <a href="./static/assignments.html">Games</a>
-        <a href="./static/grades.html">Proxies</a>
-        <a href="./static/support.html">Support</a>
+        <a href="index.html">Project Warrant</a>
+        <a href="/static/assignments.html">Games</a>
+        <a href="/static/grades.html">Proxies</a>
+        <a href="/static/support.html">Support</a>
     </div>
 
     <div class="search-container">
