--- a/static/support.html
+++ b/static/support.html
@@ -55,6 +55,42 @@
         .contact-info a:hover {
             text-decoration: underline;
         }
+        .nav-bar {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            padding: 15px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .nav-bar a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.2rem;
+            padding: 10px 15px;
+            transition: 0.3s;
+            text-align: center;
+            flex-grow: 1;
+        }
+
+        .nav-bar a:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+        }
+
+        .nav-bar a:first-child {
+            font-size: 2rem;
+            font-weight: bold;
+            text-align: left;
+            flex-grow: 2;
+        }
     </style>
 </head>
 <body>
