--- a/static/support.html
+++ b/static/support.html
@@ -19,7 +19,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 115%;
+            height: 50px;
             z-index: -1;
         }
         .container {
