--- a/static/support.html
+++ b/static/support.html
@@ -19,13 +19,13 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 50px;
+            height: 100%;
             z-index: -1;
         }
         .container {
             position: relative;
-            z-index: 0;
-            padding: 40px;
+            z-index: 2;
+            padding: 50px;
             opacity: 0;
             animation: fadeIn 2s ease-in-out forwards;
         }
@@ -64,7 +64,7 @@
             padding: 15px;
             position: fixed;
             width: 100%;
-            top: 5;
+            top: 0;
             left: 0;
             z-index: 1000;
             border-bottom: 1px solid rgba(255, 255, 255, 0.2);
@@ -104,7 +104,6 @@
             <p>Chat: <a href="https://placeholder.com" target="_blank">Project Warrant Chat</a></p>
         </div>
     </div>
-    
     <div class="nav-bar">
         <a href="index.html">Project Warrant</a>
         <a href="/static/assignments.html">Games</a>
