--- a/static/support.html
+++ b/static/support.html
@@ -105,7 +105,7 @@
         </div>
     </div>
     <br>
-    <p></p>
+    <p style="color:#1a1a2e">yay</p>
     <br>
     <div class="nav-bar">
         <a href="index.html">Project Warrant</a>
