--- a/static/support.html
+++ b/static/support.html
@@ -108,7 +108,7 @@
     <h1 style="color:#1a1a2e">yay</h1>
     <br>
     <div class="nav-bar">
-        <a href="/main/index.html">Project Warrant</a>
+        <a href="/w-pv-26/index.html">Project Warrant</a>
         <a href="/static/assignments.html">Games</a>
         <a href="/static/grades.html">Proxies</a>
     </div>
