--- a/static/assignments.html
+++ b/static/assignments.html
@@ -100,7 +100,7 @@
 <body>
     <canvas id="galaxy"></canvas>
     <div class="nav-bar">
-		<a href="index.html">Project Warrant</a>
+		<a href="/index.html">Project Warrant</a>
 		<a href="/static/grades.html">Proxies</a>
 		<a href="/static/support.html">Support</a>
     </div>
