--- a/static/grades.html
+++ b/static/grades.html
@@ -118,7 +118,7 @@
 <body>
     <canvas id="galaxy"></canvas>
     <div class="nav-bar">
-		<a href="index.html">Project Warrant</a>
+		<a href="/index.html">Project Warrant</a>
 		<a href="/static/assignments.html">Games</a>
 		<a href="/static/support.html">Support</a>
     </div>
