--- a/static/assignments.html
+++ b/static/assignments.html
@@ -107,7 +107,7 @@
     <div class="container">
         <h1>Choose Your Game</h1>
         <div class="game-grid">
-            <div class='game-card'><a href='game29.html'><img src='game29.jpg' alt='Game'><h3>Placeholder</h3></a></div>
+            <div class='slope'><a href='/Games.html/slope.html'><img src='game29.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game30.html'><img src='game30.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game31.html'><img src='game31.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game32.html'><img src='game32.jpg' alt='Game'><h3>Placeholder</h3></a></div>
