--- a/static/proxies.html
+++ b/static/proxies.html
@@ -119,7 +119,7 @@
     <canvas id="galaxy"></canvas>
     <div class="nav-bar">
 		<a href="/index.html">Project Warrant</a>
-		<a href="/static/assignments.html">Games</a>
+		<a href="/static/games.html">Games</a>
 		<a href="/static/support.html">Support</a>
     </div>
     <div class="container">
