--- a/static/support.html
+++ b/static/support.html
@@ -106,8 +106,8 @@
     </div>
     <div class="nav-bar">
         <a href="/index.html">Project Warrant</a>
-        <a href="/static/assignments.html">Games</a>
-        <a href="/static/grades.html">Proxies</a>
+        <a href="/static/games.html">Games</a>
+        <a href="/static/proxies.html">Proxies</a>
     </div>
     <script>
 		const canvas = document.getElementById('galaxy');
