--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="nav-bar">
         <a href="index.html">Project Warrant</a>
-        <a href="/static/assignments.html">Games</a>
-        <a href="/static/grades.html">Proxies</a>
+        <a href="/static/games.html">Games</a>
+        <a href="/static/proxies.html">Proxies</a>
         <a href="/static/support.html">Support</a>
     </div>
 
