--- a/static/games.html
+++ b/static/games.html
@@ -107,7 +107,7 @@
     <div class="container">
         <h1>Choose Your Game</h1>
         <div class="game-grid">
-            <div class='slope'><a href='/hold/slope.html'><img src='slope.jpg' alt='Slope-logo'><h3>Slope</h3></a></div>
+            <div class='slope'><a href='/hold/slope.html'><img src='/img/slope.jpg' alt='Slope-logo'><h3>Slope</h3></a></div>
             <div class='game-card'><a href='game30.html'><img src='game30.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game31.html'><img src='game31.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game32.html'><img src='game32.jpg' alt='Game'><h3>Placeholder</h3></a></div>
