--- a/hold/slope.html
+++ b/hold/slope.html
@@ -1,6 +1,109 @@
+<div class="nav-bar">
 <a href="/index.html">Project Warrant</a>
         <a href="/static/games.html">Games</a>
         <a href="/static/proxies.html">Proxies</a>
         <a href="/static/support.html">Support</a>
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://slope-game-seven.vercel.app/" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
-<style>body { 			margin: 0; 			overflow-x: hidden; 			background: linear-gradient(to bottom, #0a0a0a, #1a1a2e); 			background-attachment: fixed; 			color: white; 			font-family: Arial, sans-serif; 			text-align: center; 		}  		canvas { 			position: fixed; 			top: 0; 			left: 0; 			width: 100%; 			height: 100%; 			z-index: -1; 		}  		.nav-bar { 			background: rgba(255, 255, 255, 0.1); 			backdrop-filter: blur(10px); 			display: flex; 			align-items: center; 			gap: 20px; 			padding: 15px; 			position: fixed; 			width: 100%; 			top: 0; 			left: 0; 			z-index: 1000; 			border-bottom: 1px solid rgba(255, 255, 255, 0.2); 		}  		.nav-bar a { 			color: white; 			text-decoration: none; 			font-size: 1.2rem; 			padding: 10px 15px; 			transition: 0.3s; 			text-align: center; 			flex-grow: 1; 		}  		.nav-bar a:hover { 			background: rgba(255, 255, 255, 0.2); 			border-radius: 5px; 		}  		.nav-bar a:first-child { 			font-size: 2rem; 			font-weight: bold; 			text-align: left; 			flex-grow: 2; 		}  		.search-container { 			margin-top: 150px; 			text-align: center; 		}  		#search-bar { 			width: 50%; 			padding: 12px; 			font-size: 1.2rem; 			border: none; 			border-radius: 25px; 			outline: none; 			background: rgba(255, 255, 255, 0.1); 			color: white; 			text-align: center; 			box-shadow: 0 0 10px rgba(255, 255, 255, 0.3); 			transition: 0.3s; 		}  		#search-bar:focus { 			background: rgba(255, 255, 255, 0.2); 		}  		#proxy-container { 			width: 90%; 			height: 80vh; 			overflow: auto; 			margin-top: 100px; 			margin-left: auto; 			margin-right: auto; 			border: 2px solid rgba(255, 255, 255, 0.2); 			border-radius: 10px; 			padding: 15px; 			background-color: #1a1a2e; 			display: none; /* Initially hide the proxied content container */ 		}  		#proxy-container iframe { 			width: 100%; 			height: 100%; 			border: none; 			border-radius: 8px; 		}  		#fullscreen-btn { 			background-color: #333; 			color: white; 			padding: 10px 15px; 			border: none; 			border-radius: 5px; 			cursor: pointer; 			margin-top: 10px; 			display: none; /* Hide fullscreen button initially */ 		}  		#fullscreen-btn:hover { 			background-color: #444; 		}</style>
+</div>
+        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://slope-game-seven.vercel.app/" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
+<style> body {
+        margin: 0;
+        overflow-x: hidden;
+        background: linear-gradient(to bottom, #0a0a0a, #1a1a2e);
+        background-attachment: fixed;
+        color: white;
+        font-family: Arial, sans-serif;
+        text-align: center;
+    }
+
+    canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
+
+    .nav-bar {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(10px);
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        padding: 15px;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .nav-bar a {
+        color: white;
+        text-decoration: none;
+        font-size: 1.2rem;
+        padding: 10px 15px;
+        transition: 0.3s;
+        text-align: center;
+        flex-grow: 1;
+    }
+
+    .nav-bar a:hover {
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 5px;
+    }
+
+    .nav-bar a:first-child {
+        font-size: 2rem;
+        font-weight: bold;
+        text-align: left;
+        flex-grow: 2;
+    }
+
+    .container {
+        position: relative;
+        z-index: 2;
+        padding: 100px 50px 50px;
+        opacity: 0;
+        animation: fadeIn 2s ease-in-out forwards;
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+
+    .proxy-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        padding: 20px;
+        max-width: 800px;
+        margin: auto;
+    }
+
+    .proxy-card {
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 10px;
+        padding: 20px;
+        text-align: center;
+        box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .proxy-card:hover {
+        transform: scale(1.05);
+    }
+
+    .proxy-card a {
+        color: cyan;
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: bold;
+        display: block;
+    }
+
+    .proxy-card a:hover {
+        text-decoration: underline;
+    }</style>
