--- a/static/games.html
+++ b/static/games.html
@@ -101,7 +101,7 @@
     <canvas id="galaxy"></canvas>
     <div class="nav-bar">
 		<a href="/index.html">Project Warrant</a>
-		<a href="/static/grades.html">Proxies</a>
+		<a href="/static/proxies.html">Proxies</a>
 		<a href="/static/support.html">Support</a>
     </div>
     <div class="container">
