--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ canvas {
     newTab.document.write(`
         <html>
             <head>
-                <title>Loading...</title>
+                <title>about:blank</title>
                 <style>
                     * {
                         margin: 0;
