--- a/static/games.html
+++ b/static/games.html
@@ -108,9 +108,9 @@
         <h1>Choose Your Game</h1>
         <div class="game-grid">
             <div class='game-card'><a href='/hold/slope.html'><img src='/img/slope.jpg' alt='Slope-logo'><h3>Slope</h3></a></div>
-            <div class='game-card'><a href='game30.html'><img src='game30.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game31.html'><img src='game31.jpg' alt='Game'><h3>Placeholder</h3></a></div>
-            <div class='game-card'><a href='game32.html'><img src='game32.jpg' alt='Game'><h3>Placeholder</h3></a></div>
+            <div class='game-card'><a href='/hold/driftboss.html'><img src='/img/driftboss.png' alt='Game'><h3>Drift Boss</h3></a></div>
+            <div class='game-card'><a href='/hold/gunspin.html'><img src='/img/gunspin.png' alt='Game'><h3>Gun Spin</h3></a></div>
+            <div class='game-card'><a href='/hold/subway.html'><img src='/img/subway.png' alt='Game'><h3>Subway Surfers</h3></a></div>
             <div class='game-card'><a href='game33.html'><img src='game33.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game34.html'><img src='game34.jpg' alt='Game'><h3>Placeholder</h3></a></div>
             <div class='game-card'><a href='game35.html'><img src='game35.jpg' alt='Game'><h3>Placeholder</h3></a></div>
