--- a/hold/subway.html
+++ b/hold/subway.html
@@ -25,7 +25,7 @@
     }
     
     .nav-bar {
-        background: rgba(255, 255, 255, 0.1);
+        background: black;
         backdrop-filter: blur(10px);
         display: flex;
         align-items: center;
@@ -36,7 +36,7 @@
         top: 0;
         left: 0;
         z-index: 1000;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        border-bottom: 1px solid black;
         opacity: 1; /* Make sure it's visible by default */
         transition: opacity 0.3s ease-in-out;
     }
